# stonks

./: ideas.txt  issues.txt  main.py  pyproject.toml  requirements.txt
static/: animation.css
templates/: base.html  board.html  desktop.html  index.html  mobile.html
